Fixed #3019: CRF API: delete CRF / CRF Version. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3694 14881f01-568e-124b-961a-bb94932aa8d1